--- a/src/TinyBlazorAdmin/wwwroot/appsettings.json
+++ b/src/TinyBlazorAdmin/wwwroot/appsettings.json
@@ -1,11 +1,11 @@
 {
   "AzureAd": {
     "Authority": "https://login.microsoftonline.com/206bad4c-d071-4c91-9181-ef7047e6590b",
-    "ClientId": "737debc6-39bb-4e71-8c3e-27bdf3b18846",
+    "ClientId": "63d6f8db-fec4-4bdd-8b04-49ce820c2e39",
     "ValidateAuthority": true
   },
   "UrlShortenerSecuredService": {
-    "Endpoint": "https://azshorterdevrtm3e.azurewebsites.net/"
+    "Endpoint": "https://shtonegmvdp.azurewebsites.net"
   },
   "DetailedErrors":true
 }
